--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shirley Redroban # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/foto_shir.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Msc. in Economics 
